--- a/src/main.css
+++ b/src/main.css
@@ -4395,24 +4395,35 @@ button {
       /* line 37, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
       .todo-list .list-container .item:hover i {
         display: block; }
-  /* line 43, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 24, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container .item {
+        font-size: 14px; } }
+  /* line 47, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container .item.is-open {
     height: 120px;
     -webkit-transition: all 0.5s ease-in;
     -o-transition: all 0.5s ease-in;
     transition: all 0.5s ease-in; }
-    /* line 48, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    /* line 52, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    .todo-list .list-container .item.is-open i {
+      margin-top: 10px; }
+    /* line 56, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
     .todo-list .list-container .item.is-open .edit-container {
       opacity: 1;
       -webkit-transition: all 0.5s ease-in;
       -o-transition: all 0.5s ease-in;
       transition: all 0.5s ease-in; }
-  /* line 55, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 47, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container .item.is-open {
+        height: 102px; } }
+  /* line 67, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container p {
     line-height: 50px;
     display: inline-block;
     margin: 3px; }
-  /* line 61, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+  /* line 73, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container i {
     position: absolute;
     right: 20px;
@@ -4422,14 +4433,22 @@ button {
     -o-transform: translate(0, -50%);
     transform: translate(0, -50%);
     display: none; }
-  /* line 69, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 73, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container i {
+        right: 14px; } }
+  /* line 85, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container .edit-container {
     display: block;
     opacity: 0;
     -webkit-transition: all 0.5s ease-in;
     -o-transition: all 0.5s ease-in;
     transition: all 0.5s ease-in; }
-  /* line 76, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 85, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container .edit-container {
+        margin-top: -9px; } }
+  /* line 96, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container input {
     display: inline-block;
     vertical-align: top;
@@ -4437,10 +4456,19 @@ button {
     width: 30%;
     height: 42px;
     outline: none; }
-  /* line 85, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 96, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container input {
+        height: 31px;
+        width: 43%; } }
+  /* line 110, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container .fa-pencil {
     right: 60px; }
-  /* line 89, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    @media screen and (max-width: 767px) {
+      /* line 110, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container .fa-pencil {
+        right: 43px; } }
+  /* line 118, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .list-container .update-botton {
     vertical-align: top;
     border: 1px solid #cc4e29;
@@ -4449,37 +4477,43 @@ button {
     padding: 10px 19px;
     font-size: 14px;
     margin-left: 12px; }
-    /* line 97, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    /* line 126, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
     .todo-list .list-container .update-botton:hover {
       background: #D85339; }
+    @media screen and (max-width: 767px) {
+      /* line 118, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      .todo-list .list-container .update-botton {
+        padding: 6px 6px;
+        font-size: 12px;
+        margin-left: 14px; } }
 
-/* line 103, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+/* line 138, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
 .todo-list .button-container {
   margin-top: 32px;
   margin-bottom: 120px;
   position: relative; }
   @media screen and (max-width: 767px) {
-    /* line 103, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    /* line 138, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
     .todo-list .button-container {
       margin-bottom: 64px; } }
-  /* line 112, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+  /* line 147, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .button-container button {
     position: absolute;
     right: 0;
     top: 0; }
     @media screen and (max-width: 767px) {
-      /* line 112, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      /* line 147, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
       .todo-list .button-container button {
         padding: 6px 10px; } }
 
-/* line 123, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+/* line 158, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
 .todo-list .input-container {
   padding-right: 120px; }
   @media screen and (max-width: 767px) {
-    /* line 123, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+    /* line 158, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
     .todo-list .input-container {
       padding-right: 92px; } }
-  /* line 130, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+  /* line 165, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
   .todo-list .input-container input {
     width: 100%;
     height: 55px;
@@ -4488,7 +4522,7 @@ button {
     text-indent: 10px;
     outline: none; }
     @media screen and (max-width: 767px) {
-      /* line 130, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
+      /* line 165, /Users/David/Desktop/git/resume/src/app/to-do-list/scss/_to-do-list.scss */
       .todo-list .input-container input {
         font-size: 14px;
         text-indent: 5px;
