updated copy for home page

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -34,10 +34,10 @@
 							Hi, my name is Yanwen, some people call me Yan for short.  I am a front end developer that enjoys coding in HTML, CSS, and JavaScript.  My focus is on the AngularJS framework.  I also love doing design work as well and will jump into photoshop to touch up images.
 						</p>
 						<p>
-							I grew up in China and after I graduated from college, I had the chance to come to the United States because my father was able to apply for a green card for me and I’ve been here ever since.
+							I grew up in China and after I graduated from college, I had the chance to come to the United States because my father was able to apply for a green card for me. I’ve been here ever since.
 						</p>
 						<p>
-							I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world.
+							I enjoy taking pictures, exercising, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world.
 						</p>
 					</div>
 				</div>
