--- a/src/app/to-do-list/scss/_to-do-list.scss
+++ b/src/app/to-do-list/scss/_to-do-list.scss
@@ -148,6 +148,12 @@
 			position: absolute;
 			right: 0;
 			top: 0;
+			background: $secondary-button-color;
+			border: 1px solid $secondary-border-color;
+			box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+			&:hover {
+				background: $accent;
+			}
 
 			@media screen and (max-width: $screen-xs-max) {
 				padding: 6px 10px;
