renamed resume to skills

--- a/src/app/shared/html/navbar.html
+++ b/src/app/shared/html/navbar.html
@@ -15,7 +15,7 @@
 
         <ul class="hidden-sm hidden-xs">
             <li>
-                <a ui-sref-active="is-selected" ui-sref="main.resume">Resume</a>
+                <a ui-sref-active="is-selected" ui-sref="main.skills">Skills</a>
             </li>
             <li>
                 <a ui-sref-active="is-selected" ui-sref="main.projects">Projects</a>
@@ -31,7 +31,7 @@
     <div class="container">
         <ul>
             <li>
-                <a ui-sref-active="is-selected" ui-sref="main.resume">Resume</a>
+                <a ui-sref-active="is-selected" ui-sref="main.skills">Skills</a>
             </li>
             <li>
                 <a ui-sref-active="is-selected" ui-sref="main.projects">Projects</a>
