--- a/src/app/skills/html/skills.html
+++ b/src/app/skills/html/skills.html
@@ -1,10 +1,10 @@
-<div class="resume">
+<div class="skills">
 	<section class="hero">
 		<div class="overlay">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Resume</h1>
+						<h1>Skills</h1>
 					</div>
 				</div>
 			</div>
@@ -14,7 +14,7 @@
 	<section class="skill">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4" ng-repeat="group in resumeVM.groups" ng-class="group.class">
+				<div class="col-md-4" ng-repeat="group in skillsVM.groups" ng-class="group.class">
 					<div class="image">
 						<img ng-src="{{group.image}}">
 					</div>
