--- a/src/app/skills/scss/_skills.scss
+++ b/src/app/skills/scss/_skills.scss
@@ -1,4 +1,4 @@
-.resume {
+.skills {
 	.hero {
 		@media screen and (max-width: $screen-sm-max) {
 			background: url('../content/images/resume-phone.jpg');
