--- a/src/main.scss
+++ b/src/main.scss
@@ -41,7 +41,7 @@
 @import "app/contact/scss/contact";
 @import "app/home/scss/home";
 @import "app/projects/scss/projects";
-@import "app/resume/scss/resume";
+@import "app/skills/scss/skills";
 @import "app/tic-tac-toe/scss/tic-tac-toe";
 @import "app/sudouku/scss/sudouku";
 @import "app/scramble-word/scss/scramble-word";
