--- a/src/main.css
+++ b/src/main.css
@@ -4094,71 +4094,71 @@ button {
     transform: scale(1.1); }
 
 @media screen and (max-width: 991px) {
-  /* line 2, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .hero {
+  /* line 2, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .hero {
     background: url("../content/images/resume-phone.jpg");
     background-size: cover; } }
 
 @media screen and (min-width: 992px) {
-  /* line 2, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .hero {
+  /* line 2, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .hero {
     background: url("../content/images/resume-desktop.jpg");
     background-size: cover; } }
 
-/* line 17, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill img {
+/* line 17, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill img {
   height: 64px; }
 
-/* line 19, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill .main-skill-container {
+/* line 19, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill .main-skill-container {
   text-align: center; }
 
-/* line 23, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill .sub-skill-container {
+/* line 23, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill .sub-skill-container {
   text-align: center; }
 
-/* line 27, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill .sub-skill {
+/* line 27, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill .sub-skill {
   display: block;
   font-size: 16px;
   line-height: 28px;
   color: #81888D;
   margin-bottom: 5px; }
 
-/* line 35, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill .image {
+/* line 35, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill .image {
   margin-top: 64px;
   text-align: center;
   margin-bottom: 15px; }
 
-/* line 41, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume .skill .main-skill {
+/* line 41, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+.skills .skill .main-skill {
   color: #D85339;
   border-bottom: 10px solid #d2d2d2;
   display: inline-block; }
 
 @media screen and (max-width: 991px) {
-  /* line 49, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .skill .sub-skill-container {
+  /* line 49, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .skill .sub-skill-container {
     padding-bottom: 50px; }
-  /* line 53, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .skill .sub-skill-container.divider {
+  /* line 53, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .skill .sub-skill-container.divider {
     border-bottom: 1px solid #d2d2d2; }
-  /* line 57, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .skill .image {
+  /* line 57, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .skill .image {
     margin-top: 64px; }
-  /* line 61, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .skill .main-skill {
+  /* line 61, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .skill .main-skill {
     margin-top: 32px;
     margin-bottom: 32px; } }
 
 @media screen and (min-width: 992px) {
-  /* line 15, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .skill {
+  /* line 15, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+  .skills .skill {
     padding-top: 56px;
     padding-bottom: 120px; }
-    /* line 72, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-    .resume .skill .main-skill {
+    /* line 72, /Users/David/Desktop/git/resume/src/app/skills/scss/_skills.scss */
+    .skills .skill .main-skill {
       margin-bottom: 16px; } }
 
 @media screen and (max-width: 991px) {
