--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -47,14 +47,14 @@
 		                </a>
 	              </div>
 	            </div>
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="card-container">
 						<a ui-sref="main.sudouku">
 							<p class="card-container-header">Sudouku</p>
 							<i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
 						</a>
 					</div>
-				</div>
+				</div> -->
 	        </div>
 	    </div>
 	</section>
