--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -31,7 +31,7 @@
 							Background
 						</h3>
 						<p>
-							Hi, my name is Yanwen, some people call me Yan for short.  I am a front end developer that enjoys coding in HTML, CSS, and JavaScript.  My focus is on the AngularJS framework.  I also love doing design work as well and will jump into photoshop to touch up images.
+							Hi, my name is Yanwen, some people call me Yan for short. I am a front end developer that enjoys coding in HTML, CSS, and JavaScript. My focus is on the AngularJS framework. I also love doing design work as well and will jump into photoshop to touch up images.
 						</p>
 						<p>
 							I grew up in China and after I graduated from college, I had the chance to come to the United States because my father was able to apply for a green card for me. I’ve been here ever since.
@@ -60,13 +60,13 @@
 							Programming
 						</h3>
 						<p>
-							My first encounter with technology was when I was in elementary school and MSN Messenger first came out.  I thought it was amazing that I could live chat with anyone around the world.  I told myself that someday I wanted to work on something like that.
+							My first encounter with technology was when I was in elementary school and MSN Messenger first came out. I thought it was amazing that I could live chat with anyone around the world. I told myself that someday I wanted to work on something like that.
 						</p>
 						<p>
-							When I came to the US, I started learning English while working as a law office secretary, life insurance sales person, and ophthalmologist medical assistant.  However, on the side I was constantly learning programming because I wanted to follow my dream.
+							When I came to the US, I started learning English while working as a legal assistant, life insurance sales agent, and ophthalmic technician. However, on the side I was constantly learning programming because I wanted to follow my dream.
 						</p>
 						<p>
-							I took courses at Udacity, Khan Academy, W3Schools, Codecademy, PluralSight, and Maker Square.  In addition, I read books such as Eloquent JavaScript and JavaScript the Good Parts.  Now that I have experience HTML, CSS, JavaScript, and AngularJS.  I am really excited to start making a difference in the world.
+							I took courses at Udacity, Khan Academy, W3Schools, Codecademy, Coursera and PluralSight. In addition, I read books such as Eloquent JavaScript and JavaScript the Good Parts. Now that I have experience HTML, CSS, JavaScript, and AngularJS. I am really excited to start making a difference in the world.
 						</p>
 					</div>
 				</div>
