reduced the font size of icons for stop watch

--- a/src/app/stop-watch/html/stop-watch.html
+++ b/src/app/stop-watch/html/stop-watch.html
@@ -24,9 +24,9 @@
 	                	<div class="time" ng-bind="stopWatchVM.data.milliseconds"></div>
                 	</div>
                 	<div class="button-container">
-	                	<i class="fa fa-play fa-5x" ng-click="stopWatchVM.actions.start()"></i>
-	                	<i class="fa fa-pause fa-5x" ng-click="stopWatchVM.actions.stop()"></i>
-	                	<i class="fa fa-undo fa-5x" ng-click="stopWatchVM.actions.reset()"></i>
+	                	<i class="fa fa-play" ng-click="stopWatchVM.actions.start()"></i>
+	                	<i class="fa fa-pause" ng-click="stopWatchVM.actions.stop()"></i>
+	                	<i class="fa fa-undo" ng-click="stopWatchVM.actions.reset()"></i>
 	                </div>
                 </div>
             </div>
