added scaffolding for d3 project

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -47,6 +47,14 @@
 		                </a>
 	              </div>
 	            </div>
+			<!--<div class="col-md-4">
+	              	<div class="card-container">
+		                <a ui-sref="main.d3">
+		                    <p class="card-container-header">d3</p>
+		                    <i class="card-container-logo fa fa-th fa-3x"></i>
+		                </a>
+	              	</div>
+	            </div> -->
 				<!-- <div class="col-md-4">
 					<div class="card-container">
 						<a ui-sref="main.sudouku">
