--- a/src/main.css
+++ b/src/main.css
@@ -4641,3 +4641,15 @@ button {
       /* line 89, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
       .stop-watch .button-container .fa {
         font-size: 2em; } }
+
+/* line 3, /Users/David/Desktop/git/resume/src/app/d3/scss/_d3.scss */
+.d3 h3 {
+  text-align: center;
+  color: #81888D;
+  margin-top: 120px; }
+
+@media screen and (max-width: 991px) {
+  /* line 10, /Users/David/Desktop/git/resume/src/app/d3/scss/_d3.scss */
+  .d3 h3 {
+    margin-top: 64px;
+    margin-bottom: 64px; } }
