--- a/src/main.scss
+++ b/src/main.scss
@@ -47,3 +47,4 @@
 @import "app/scramble-word/scss/scramble-word";
 @import "app/to-do-list/scss/to-do-list";
 @import "app/stop-watch/scss/stop-watch";
+@import "app/d3/scss/d3";
