restyled cards on contact page

--- a/src/app/contact/scss/_contact.scss
+++ b/src/app/contact/scss/_contact.scss
@@ -9,4 +9,13 @@
 	    	&:hover { transform: scale(1.1); }
 	    }
 	}
+
+	.card-container {
+		background: $accent-hover;
+
+		&:hover {
+            background: $primary-light;
+            transform: scale(1.1); 
+        }
+	}
 }
