--- a/src/app/shared/scss/_button.scss
+++ b/src/app/shared/scss/_button.scss
@@ -7,6 +7,7 @@ button {
     border: 1px solid $main-border-color;
     font-size: 18px;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    letter-spacing: 1px;
 
     &:hover {
         color: $primary;
