added new book to homepage copy

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -66,7 +66,7 @@
 							When I came to the US, I started learning English while working as a legal assistant, life insurance sales agent, and ophthalmic technician. However, on the side I was constantly learning programming because I wanted to follow my dream.
 						</p>
 						<p>
-							I took courses at Udacity, Khan Academy, W3Schools, Codecademy, Coursera and PluralSight. In addition, I read books such as Eloquent JavaScript, JavaScript the Good Parts, and Don't Make Me Think. Now that I have experience HTML, CSS, JavaScript, and AngularJS. I am really excited to start making a difference in the world.
+							I took courses at Udacity, Khan Academy, W3Schools, Codecademy, Coursera and PluralSight. In addition, I read books such as Eloquent JavaScript, JavaScript the Good Parts, Don't Make Me Think and The Visual Dispaly of Quantitative Information. Now that I have experience HTML, CSS, JavaScript, and AngularJS. I am really excited to start making a difference in the world.
 						</p>
 					</div>
 				</div>
